--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "cross-env": "^5.2.0",
     "nodemon": "^1.19.1"
+  },
+  "dependencies": {
+    "mysql": "^2.18.1"
   }
 }
