--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "redis": "^2.8.0"
   }
 }
